tests/fixtures/invalid/pow_set_str_bool.py
# Cannot call pow() with Set[int], Str, Bool
x = pow({1, 2, 3}, "hello", True)
